force-app/zurich-base/main/default/objects/ExternalIdField__mdt/ExternalIdField__mdt.object-meta.xml
<CustomObject>
    <label>External Id Field</label>
    <pluralLabel>External Id Fields</pluralLabel>
</CustomObject>