force-app/zurich-base/main/default/objects/ExternalIdField__mdt/fields/ExternalId__c.field-meta.xml
<CustomField>
    <fullName>ExternalId__c</fullName>
    <label>External Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>