force-app/zurich-base/main/default/objects/ExternalIdField__mdt/fields/Origin__c.field-meta.xml
<CustomField>
    <fullName>Origin__c</fullName>
    <label>Origin</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>INFO</fullName>
                <default>true</default>
                <label>INFO</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>