force-app/zurich-base/main/default/objects/ExternalIdField__mdt/fields/OriginEntity__c.field-meta.xml
<CustomField>
    <fullName>OriginEntity__c</fullName>
    <label>Origin Entity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>