force-app/zurich-base/main/default/objects/ExternalIdField__mdt/fields/Salesforce_entity__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_entity__c</fullName>
    <label>Salesforce entity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Account</fullName>
                <default>true</default>
                <label>Account</label>
            </value>
            <value>
                <fullName>Contact</fullName>
            </value>
            <value>
                <fullName>ContactPointAddress</fullName>
            </value>
            <value>
                <fullName>ContactPointPhone</fullName>
            </value>
            <value>
                <fullName>ContactPointEmail</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>