force-app/zurich-base/main/default/objects/ExternalIdField__mdt/fields/SalesforceEntity__c.field-meta.xml
<CustomField>
    <fullName>SalesforceEntity__c</fullName>
    <label>Salesforce entity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Account</fullName>
                <default>true</default>
                <label>Account</label>
            </value>
            <value>
                <fullName>Contact</fullName>
            </value>
            <value>
                <fullName>ContactPointAddress</fullName>
            </value>
            <value>
                <fullName>ContactPointPhone</fullName>
            </value>
            <value>
                <fullName>ContactPointEmail</fullName>
            </value>
            <value>
                <fullName>Product2</fullName>
                <label>Product</label>
            </value>
            <value>
                <fullName>Relationship__c</fullName>
                <label>Relationship</label>
            </value>
            <value>
                <fullName>Policy__c</fullName>
                <label>Policy</label>
            </value>
            <value>
                <fullName>Asset</fullName>
            </value>
            <value>
                <fullName>Opportunity</fullName>
            </value>
            <value>
                <fullName>Claim__c</fullName>
                <label>Claim</label>
            </value>
            <value>
                <fullName>Quote</fullName>
            </value>
            <value>
                <fullName>Case</fullName>
            </value>
            <value>
                <fullName>Special_Condition__c</fullName>
                <label>Partner Special Condition</label>
            </value>
            <value>
                <fullName>KPI__c</fullName>
                <label>KPI</label>
            </value>
            <value>
                <fullName>Consent__c</fullName>
                <label>Consent</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>