force-app/zurich-base/main/default/objects/ExternalIdField__mdt/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>MasterLabel</columns>
    <columns>Origin__c</columns>
    <columns>OriginEntity__c</columns>
    <columns>SalesforceEntity__c</columns>
    <columns>ExternalId__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>